--- a/index.html
+++ b/index.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><title>HTML Clean Up Lab</title>
+
+<head>
+  <meta charset="UTF-8">
+  <title>HTML Clean Up Lab DONE</title>
 </head>
 
-
-
 <body>
-<!--Your Name-->
-<!--Course You are enrolled in-->
-<!--Your year in college or pre-college-->
-<div id="page-wrapper">
-<header id="header">
+  <!--Maritzha Olaez-->
+  <!--Course: ITMD-361-02-->
+  <!--Second Year-->
+  <div id="page-wrapper">
+    <header id="header">
 			<a id="logo1" href="index.html"><img src="logo3.png"></a>
 			<h1>My Demo Site</h1>
-</header>
-<nav id="main-nav">
-<ul>
-<li><a href = "http://www.iit.edu">IIT Home</a></li>
-<li><a href="http://www.google.com">Google</a></li>
-<li><a href="http://www.microsoft.com">Microsoft</a></li>
-<li><a href = "http://www.cnn.com">CNN</a></li>
-<li><a href="http://admissions.iit.edu">IIT Admissions</a></li>
-</ul>
-</nav>
+    </header>
+    <nav id="main-nav">
+      <ul>
+        <li><a href = "http://www.iit.edu">IIT Home</a></li>
+        <li><a href="http://www.google.com">Google</a></li>
+        <li><a href="http://www.microsoft.com">Microsoft</a></li>
+        <li><a href = "http://www.cnn.com">CNN</a></li>
+        <li><a href="http://admissions.iit.edu">IIT Admissions</a></li>
+      </ul>
+    </nav>
     <main id="content-wrapper">
       <div id="main-content">
-        <h2><b>This is our h2 Tag</b></h2>
+          <h2><strong>This is our h2 Tag</strong></h2>
           <img class="imageR" src="./images/main.png">
           <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
