--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <!--Maritzha Olaez-->
-  <!--Course: ITMD-361-02-->
+  <!--ITMD-361-02-->
   <!--Second Year-->
   <div id="page-wrapper">
     <header id="header">
@@ -17,10 +17,10 @@
     </header>
     <nav id="main-nav">
       <ul>
-        <li><a href = "http://www.iit.edu">IIT Home</a></li>
+        <li><a href="http://www.iit.edu">IIT Home</a></li>
         <li><a href="http://www.google.com">Google</a></li>
         <li><a href="http://www.microsoft.com">Microsoft</a></li>
-        <li><a href = "http://www.cnn.com">CNN</a></li>
+        <li><a href="http://www.cnn.com">CNN</a></li>
         <li><a href="http://admissions.iit.edu">IIT Admissions</a></li>
       </ul>
     </nav>
